Added get commands of category service to swagger.yaml and category_service.js
